chore: refactor pom and upgrade kotlin to 1.6.20